--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,198 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="keywords" content="" />
+    <meta name="author" content="" />
+    <meta name="robots" content="" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Yeshadmin:Customer Relationship Management Admin Bootstrap 5 Template"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <meta
+      property="og:title"
+      content="Yeshadmin:Customer Relationship Management Admin Bootstrap 5 Template"
+    />
+    <meta
+      property="og:description"
+      content="Yeshadmin:Customer Relationship Management Admin Bootstrap 5 Template"
+    />
+    <meta
+      property="og:image"
+      content="https://yeshadmin.dexignzone.com/xhtml/social-image.png"
+    />
+    <meta name="format-detection" content="telephone=no" />
+    <title>Rullier Admin</title>
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.png" />
+    <link
+      href="/vendor/bootstrap-select/dist/css/bootstrap-select.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.4/nouislider.min.css"
+    />
+    <link
+      href="/vendor/datatables/css/jquery.dataTables.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.datatables.net/buttons/1.6.4/css/buttons.dataTables.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="/vendor/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css"
+      rel="stylesheet"
+    />
+    <link href="/vendor/tagify/dist/tagify.css" rel="stylesheet" />
+    <link href="/css/style.css" rel="stylesheet" />
     <title>React App</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="keywords" content="" />
+    <meta name="author" content="" />
+    <meta name="robots" content="" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta
+      name="description"
+      content="Yashadmin:Sales Management System Admin Bootstrap 5 Template"
+    />
+    <meta
+      property="og:title"
+      content="Yashadmin:Sales Management System Admin Bootstrap 5 Template"
+    />
+    <meta
+      property="og:description"
+      content="Yashadmin:Sales Management System Admin Bootstrap 5 Template"
+    />
+    <meta property="og:image" content="page-error-404.html" />
+    <meta name="format-detection" content="telephone=no" />
+    <title>Yash Admin Sales Management System</title>
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.png" />
+    <link
+      href="/vendor/bootstrap-select/dist/css/bootstrap-select.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      href="/vendor/datatables/css/jquery.dataTables.min.css"
+      rel="stylesheet"
+    />
+    <link href="/vendor/jvmap/jquery-jvectormap.css" rel="stylesheet" />
+    <link
+      href="https://cdn.datatables.net/buttons/1.6.4/css/buttons.dataTables.min.css"
+      rel="stylesheet"
+    />
+    <link href="/vendor/tagify/dist/tagify.css" rel="stylesheet" />
+    <link href="/css/style.css" rel="stylesheet" />
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="keywords" content="" />
+    <meta name="author" content="" />
+    <meta name="robots" content="" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta
+      name="description"
+      content="Yashadmin:Sales Management System Admin Bootstrap 5 Template"
+    />
+    <meta
+      property="og:title"
+      content="Yashadmin:Sales Management System Admin Bootstrap 5 Template"
+    />
+    <meta
+      property="og:description"
+      content="Yashadmin:Sales Management System Admin Bootstrap 5 Template"
+    />
+    <meta property="og:image" content="page-error-404.html" />
+    <meta name="format-detection" content="telephone=no" />
+    <title>Yash Admin Sales Management System</title>
+    <link
+      href="/vendor/bootstrap-select/dist/css/bootstrap-select.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="/vendor/datatables/css/jquery.dataTables.min.css"
+      rel="stylesheet"
+    />
+    <link href="/css/style.css" rel="stylesheet" />
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      href="/vendor/jquery-smartwizard/dist/css/smart_wizard.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="/vendor/bootstrap-select/dist/css/bootstrap-select.min.css"
+      rel="stylesheet"
+    />
+    <link href="/css/style.css" rel="stylesheet" />
+    <script defer="defer" src="/static/js/main.47751fec.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <script src="/vendor/global/global.min.js"></script>
+    <script src="/vendor/chart.js/Chart.bundle.min.js"></script>
+    <script src="/vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
+    <script src="/vendor/apexchart/apexchart.js"></script>
+    <script src="v/vendor/datatables/js/jquery.dataTables.min.js"></script>
+    <script src="/vendor/datatables/js/dataTables.buttons.min.js"></script>
+    <script src="/vendor/datatables/js/buttons.html5.min.js"></script>
+    <script src="/vendor/datatables/js/jszip.min.js"></script>
+    <script src="/js/plugins-init/datatables.init.js"></script>
+    <script src="/vendor/bootstrap-datetimepicker/js/moment.js"></script>
+    <script src="/vendor/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
+    <script src="/js/deznav-init.js"></script>
+    <script src="/js/demo.js"></script>
+    <script src="/vendor/global/global.min.js"></script>
+    <script src="/vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
+    <script src="/vendor/tagify/dist/tagify.js"></script>
+    <script src="/vendor/datatables/js/jquery.dataTables.min.js"></script>
+    <script src="/vendor/datatables/js/dataTables.buttons.min.js"></script>
+    <script src="/vendor/datatables/js/buttons.html5.min.js"></script>
+    <script src="/vendor/datatables/js/jszip.min.js"></script>
+    <script src="/js/plugins-init/datatables.init.js"></script>
+    <script src="/js/deznav-init.js"></script>
+    <script src="/js/demo.js"></script>
+    <script src="/js/custom.js"></script>
+    <script>
+      $(document).ready(function () {
+        var n = $(".count"),
+          r = n.length,
+          t = [];
+        for (i = 0; i < r; i++) t[i] = parseInt(n[i].innerHTML);
+        var e = function (i, r, t) {
+          var e = i;
+          setInterval(function () {
+            e < r && (e++, (n[t].innerHTML = e));
+          }, 500);
+        };
+        for (j = 0; j < r; j++) e(0, t[j], j);
+      });
+    </script>
+    <script src="/vendor/global/global.min.js"></script>
+    <script src="/vendor/chart.js/Chart.bundle.min.js.net/npm/apexcharts"></script>
+    <script src="/vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
+    <script src="/vendor/global/global.min.js"></script>
+    <script src="/vendor/jquery-steps/build/jquery.steps.min.js"></script>
+    <script src="/vendor/jquery-validation/jquery.validate.min.js"></script>
+    <script src="/js/plugins-init/jquery.validate-init.js"></script>
+    <script src="/vendor/datatables/js/jquery.dataTables.min.js"></script>
+    <script src="/js/plugins-init/datatables.init.js"></script>
+    <script src="/vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
+    <script src="/vendor/jquery-smartwizard/dist/js/jquery.smartWizard.js"></script>
+    <script src="/vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
+    <script>
+      $(document).ready(function () {
+        $("#smartwizard").smartWizard();
+      });
+    </script>
   </body>
 </html>
